tests/cases/compiler-development/artifact/errors/diagnostic-lexer-nonascii-byte.diagnostic
diagnostic error code=L0001 family=lexer message="unexpected byte 0xC3" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-lexer-nonascii-byte.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-lexer-nonascii-byte.ari" bytes=3
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-lexer-nonascii-byte.ari" line=1 column=1 end_line=1 end_column=2 byte_start=0 byte_end=1 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-lexer-nonascii-byte.ari:1:1\n   |\n 1 | é\n   | ^"
  Note index=0 location=none message="the lexer can only tokenize characters that are part of Ari syntax"
  Help index=0 location=none message="remove this input or put text data inside a string literal"
